--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ gradle-app.setting
 gradle/
 gradlew
 gradlew.bat
+bin/
 
 # Cache of project
 .gradletasknamecache
@@ -21,5 +22,7 @@ gradlew.bat
 # Eclipse Gradle plugin generated files
 # Eclipse Core
 .project
+
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+.settings/
